--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,9 +2,10 @@
     display: flex;
     height: 100vh;
     .aside{
-        flex-basis: 30%;
+        flex-basis: 42%;
     }
     .detail{
         flex-grow: 1;
+        flex-basis: 0;
     }
 }
