--- a/src/components/aside/MailList.scss
+++ b/src/components/aside/MailList.scss
@@ -11,6 +11,13 @@
             justify-content: space-between;
             border-bottom: $border;
             padding: 1em;
+            &.new{
+                background-color: $color-background-active;
+                border-left: 3px solid $color-primary;
+                .mail-content .title{
+                    color: $color-primary;
+                }
+            }
             .mail-content{
                 display: flex;
                 flex-direction: column;
