add features and transitions

--- a/src/components/aside/Aside.scss
+++ b/src/components/aside/Aside.scss
@@ -4,6 +4,8 @@
 .aside{
     background-color: white;
     box-shadow: 2px 0px 24px rgba(0, 0, 0, 0.22);
+    display: flex;
+    flex-direction: column;
     .header{
         display: flex;
         justify-content: space-between;
@@ -34,15 +36,28 @@
         }
     }
     .search{
-        display: flex;
         padding: 1em;
         border-bottom: $border;
         .input{
-            flex-grow: 1;
-            border: none;
+            display: flex;
             border-radius: $button-border-radius;
             box-shadow: 0 0 16px rgba(0, 0, 0, 0.16);
-            padding: 0.5em;
+            input{
+                flex-grow: 1;
+                border: none;
+                padding: 0.5em;
+                border-radius: $button-border-radius;
+            }
+            .icon{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 0.5em;
+            }
         }
+    }
+    .mail-list{
+        flex-grow: 1;
+        overflow-y: scroll;
     }
 }
