--- a/src/components/detail/MailContainer.scss
+++ b/src/components/detail/MailContainer.scss
@@ -47,6 +47,19 @@
             justify-content: space-between;
             box-shadow: 0 -1px 0 rgba($color: #000000, $alpha: 0.1);
             background-color: $color-background;
+            .tools{
+                display: flex;
+                align-items: center;
+                padding: 0 0.5em;
+                button{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: transparent;
+                    border: none;
+                    padding: 0.5em;
+                }
+            }
             .button{
                 background-color: transparent;
                 border: none;
